--- a/Viste/Cliente/GUI/modifica_profilo.ui
+++ b/Viste/Cliente/GUI/modifica_profilo.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>390</width>
+    <width>459</width>
     <height>350</height>
    </rect>
   </property>
@@ -60,7 +60,7 @@
             <string notr="true">color:rgb(255, 255, 255)</string>
            </property>
            <property name="text">
-            <string>Nuovo cognome:</string>
+            <string>Nuovo Cognome:</string>
            </property>
           </widget>
          </item>
@@ -75,7 +75,7 @@
             <string notr="true">color:rgb(255, 255, 255)</string>
            </property>
            <property name="text">
-            <string>Nuovo telefono:</string>
+            <string>Nuovo Telefono:</string>
            </property>
           </widget>
          </item>
@@ -90,7 +90,7 @@
             <string notr="true">color:rgb(255, 255, 255)</string>
            </property>
            <property name="text">
-            <string>Nuovo CF:</string>
+            <string>Nuovo C. Fiscale:</string>
            </property>
           </widget>
          </item>
