--- a/Viste/Amministratore/GUI/cud_mezzo.ui
+++ b/Viste/Amministratore/GUI/cud_mezzo.ui
@@ -176,6 +176,11 @@ color: rgb(255, 255, 255);</string>
          </item>
          <item>
           <widget class="QPushButton" name="back_button">
+           <property name="font">
+            <font>
+             <bold>true</bold>
+            </font>
+           </property>
            <property name="styleSheet">
             <string notr="true">font-size:20; color:white;background-color:rgb(38, 157, 206)
 </string>
