--- a/Viste/Amministratore/GUI/statistiche.ui
+++ b/Viste/Amministratore/GUI/statistiche.ui
@@ -232,6 +232,11 @@
          </item>
          <item>
           <widget class="QPushButton" name="back_button">
+           <property name="font">
+            <font>
+             <bold>true</bold>
+            </font>
+           </property>
            <property name="styleSheet">
             <string notr="true">font-size:20; color:white;background-color:rgb(38, 157, 206)
 </string>
