--- a/Viste/Accesso/GUI/createacc.ui
+++ b/Viste/Accesso/GUI/createacc.ui
@@ -6,14 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>387</width>
-    <height>536</height>
+    <width>470</width>
+    <height>600</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>470</width>
+    <height>600</height>
+   </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>387</width>
-    <height>536</height>
+    <width>470</width>
+    <height>600</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -232,6 +238,11 @@ font: 20pt &quot;Segoe UI&quot;;</string>
      </item>
      <item>
       <widget class="QPushButton" name="signupbutton">
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+        </font>
+       </property>
        <property name="styleSheet">
         <string notr="true">font-size:14; color:white;background-color:rgb(38, 157, 206)
 </string>
