--- a/Viste/Cliente/GUI/modifica_profilo.ui
+++ b/Viste/Cliente/GUI/modifica_profilo.ui
@@ -325,6 +325,11 @@
        </item>
        <item>
         <widget class="QPushButton" name="confirm_button">
+         <property name="font">
+          <font>
+           <bold>true</bold>
+          </font>
+         </property>
          <property name="styleSheet">
           <string notr="true">font-size:20; color:white;background-color:rgb(38, 157, 206)
 </string>
@@ -336,6 +341,11 @@
        </item>
        <item>
         <widget class="QPushButton" name="back_button">
+         <property name="font">
+          <font>
+           <bold>true</bold>
+          </font>
+         </property>
          <property name="styleSheet">
           <string notr="true">font-size:20; color:white;background-color:rgb(38, 157, 206)
 </string>
